# lloca-experiments

./: README.md  REPRODUCE.md  pyproject.toml  requirements.txt  run.py  run_workflow.py
.github/workflows/: experiments_amplitudes.yaml  experiments_eventgen.yaml  experiments_tagging.yaml
config/: amplitudes.yaml  amplitudesxl.yaml  default.yaml  jctagging.yaml  tagging.yaml  toptagging.yaml  toptagxl.yaml  ttbar.yaml
config/model/: amp_graphnet.yaml  amp_lgatr.yaml  amp_mlp.yaml  amp_pelican.yaml  amp_transformer.yaml  eg_graphnet.yaml  eg_lgatr.yaml  eg_mlp.yaml  eg_transformer.yaml  tag_MIParT-L.yaml  tag_gatr.yaml  tag_graphnet.yaml  tag_particlenet-lite.yaml  tag_particlenet.yaml  tag_pelican.yaml  tag_pelican_fair.yaml  tag_pelican_mini.yaml  tag_pelican_official.yaml  tag_top_transformer.yaml  tag_transformer.yaml  tag_transformer2.yaml
config/training/: amp_default.yaml  eg_default.yaml  tag_default.yaml  tag_top_default.yaml
config_quick/: amplitudes.yaml  amplitudesxl.yaml  tagging.yaml
config_quick/model/: amp_dsi.yaml  amp_graphnet.yaml  amp_mlp.yaml  amp_pelican.yaml  amp_transformer.yaml  eg_graphnet.yaml  eg_lgatr.yaml  eg_mlp.yaml  eg_transformer.yaml  tag_MIParT.yaml  tag_ParT.yaml  tag_gatr.yaml  tag_graphnet.yaml  tag_pelican.yaml  tag_pelican_official.yaml  tag_transformer.yaml  tag_transformer2.yaml
data/: collect_data.py
experiments/: base_experiment.py  logger.py  misc.py  ranger.py
experiments/amplitudes/: experiment.py  experimentxl.py  plots.py  utils.py  (+1 more)
pelican/: layers.py  nets.py  primitives.py
tests/: constants.py
(+113 files in other folders)
